# openglengine

./: .gitignore  CMakeLists.txt  README.md  install.sh
sources/: build.sh  main.cpp
sources/AnimatedObject/: AnimatedObject.cpp  AnimatedObject.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h
sources/AnimatedObject/Shaders/: animatedobject_f.glsl  animatedobject_v.glsl
sources/Core/: Camera.cpp  Camera.h  Light.cpp  Light.h  Material.h
sources/Drawable/: Drawable.cpp  Drawable.h
sources/Init/: init.cpp  init.h
sources/Loader/: AnimatedMeshLoader.h  AssimpGLMHelper.hpp  MeshLoader.h  OBJLoader.cpp  OBJLoader.h  Shader.h  TextureLoader.cpp  TextureLoader.h  stb_image.h
sources/Object/: Object.cpp  Object.h
sources/Object/Shaders/: object_f.glsl  object_v.glsl
sources/Renderer/: MasterRenderer.cpp  MasterRenderer.h  renderer_f.glsl
sources/ShaderClassic/: ClassicFunctionsFragment.glsl  IncludeFragment.glsl  IncludeVertex.glsl
sources/Shaders/: Shader.cpp  Shader.h
sources/Shaders/modules/: classic_definitions.glsl  phong.glsl  phong_include.glsl  position.glsl  shadow.glsl
sources/Skybox/: Skybox.cpp  Skybox.h
sources/Skybox/Shaders/: skybox_f.glsl
sources/Terrain/: TerrainGenerator.cpp  TerrainGenerator.h
sources/Terrain/Shaders/: terrain_f.glsl  terrain_v.glsl
sources/UI/: UI.cpp  UI.h
